[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://scenes/menus/character_select_menu/character_button.gd" id="1"]

[node name="CharacterButton" type="TextureButton"]
custom_minimum_size = Vector2(200, 200)
texture_filter = 1
stretch_mode = 5
script = ExtResource("1")

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
